kbd: Autospec creation for update from version 2.4.0 to version 2.5.0
Adam Williamson (1):
      fa.map: drop high codepoint character that chokes loadkeys

Alexey Gladkov (28):
      use upstream license file
      use https for link to homepage
      fix POSIX conformance
      fix some issues in scripts identified using shellcheck
      fix typos
      Add Gitlab CI
      Github-CI
      Add CONTRIBUTING.md
      man: dumpkeys: Remove enumeration of options from SYNOPSIS
      man: dumpkeys: Document a few missing options
      man: loadkeys: Remove enumeration of options from SYNOPSIS
      keymap: Fix typo in comment
      Add Euro at Portuguese keyboards
      Incorrect acentuation pt-latin9
      CI: Fix tests after pt-latin9 change
      kfont: Add kfont_free()
      kfont: Тake the verbose parameter into account when logging messages
      Make libkfont public library
      Fix dependencies in the libkeymap.pc
      Update general info in README and CONTRIBUTING
      Update and sort .gitignore
      Update github actions
      v2.5-rc1
      po: Update translations (from translationproject.org)
      Fix typo in the help message
      Keymap for PinePhone keyboard
      po: Update translations (from translationproject.org)
      v2.5.0

Alexey Sakovets (1):
      Help command should print '-c' (lowercase) instead of '-C' (uppercase) for "the console device to be used" option.

Andre Schmidt (1):
      Add hexadecimal file support for setvtrgb.

Anisse Astier (1):
      src/libkeymap: better error message on unsupported unicode value

Benno Schulenberg (1):
      docs: use the correct name for the sticky Shift symbol (SShift)

Cian Donovan (1):
      Add Irish keyboard map

Fabian Vogt (1):
      libkfont: Initialize kfont_context->options

Jack Rosenthal (1):
      keymaps: Add 3l keymap

Tommaso Bonvicini (1):
      Added braces to IT keyboard map

Valentin Herrmann (1):
      data/keymaps/i386/neo: use Delete instead of Backspace

Vitezslav Crhonek (6):


--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = kbd
-url = https://github.com/legionus/kbd/archive/refs/tags/v2.4.0.tar.gz
+url = https://github.com/legionus/kbd/archive/v2.5.0/kbd-2.5.0.tar.gz
 archives = 
 giturl = https://github.com/legionus/kbd.git
 domain = 
